--- a/css/style.scss
+++ b/css/style.scss
@@ -1,8 +1,87 @@
-$myFavColor: purple;
 
 
 
+@mixin headerBackground{
+  background-image: url(../images/pexels-photo-header.jpeg);
 
+}
 body{
-  background-color: $myFavColor;
+  margin: 0;
+  overflow-x: hidden;
+}
+nav {
+  background-color: green;
+  padding: 5px;
+}
+
+ul{
+  text-align: center;
+  display: run-in;
+}
+li{
+  display: inline;
+  float: left;
+  border-right: 1px solid;
+  font-size: 20px;
+  background-color: green;
+}
+
+li a{
+  display: block;
+
+
+    padding:10px 12px;
+
+
+}
+a:hover{
+  background-color: blue;
+  color: white;
+}
+
+.top1{
+  @include headerBackground;
+  height: 260px;
+
+}
+.top1{
+
+    padding: 100px 0 90px;
+    background-size: cover;
+    background-position: 70% 30%;
+    text-align: center;
+    color: #fff;
+    background-color: #555;
+
+}
+
+#container{
+  display:grid;
+  grid-template-columns:repeat(4,1fr);
+  grid-template-rows: 1fr;
+  margin-top: 1%;
+  grid-gap: 10px;
+  h1{
+    font-size: 30px;
+  }
+}
+.rock{
+  grid-column-start: 1;
+  grid-column-end: 2;
+  grid-row-start: 1;
+}
+div img{
+  height: 240px;
+  width: 379px;
+}
+div{
+  text-align: center;
+}
+.menu{
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-rows:1fr;
+  height:350px;
+  text-align: center;
+
 }
