--- a/css/style.css
+++ b/css/style.css
@@ -2,28 +2,69 @@ body {
   margin: 0;
   overflow-x: hidden; }
 
-nav {
-  background-color: green;
-  padding: 5px; }
-
 ul {
-  text-align: center;
-  display: run-in; }
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333; }
+
+.dropdown {
+  float: left;
+  overflow: hidden; }
+
+.categories {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 145px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+
+.categories a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left; }
+
+li a:hover {
+  background-color: blue; }
+
+.dropdown:hover button {
+  background-color: blue;
+  width: 145px; }
 
 li {
-  display: inline;
   float: left;
-  border-right: 1px solid;
-  font-size: 20px;
-  background-color: green; }
+  border-right: 1px solid #bbb; }
 
 li a {
   display: block;
-  padding: 10px 12px; }
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none; }
 
-a:hover {
-  background-color: blue;
-  color: white; }
+ul li:hover .dropdown:hover {
+  background-color: blue; }
+
+.dropdown .button {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0; }
+
+.dropdown:hover .categories {
+  display: block; }
+
+.categories a:hover {
+  background-color: #ddd; }
 
 .top1 {
   background-image: url(../images/pexels-photo-header.jpeg);
