--- a/scss/style.scss
+++ b/scss/style.scss
@@ -106,8 +106,10 @@ ul li:hover .dropdown:hover{
   grid-template-rows: 1fr;
   margin-top: 1%;
   grid-gap: 10px;
+
   h1{
     font-size: 30px;
+    text-align: center;
   }
 }
 .rock{
@@ -115,17 +117,43 @@ ul li:hover .dropdown:hover{
   grid-column-end: 2;
   grid-row-start: 1;
 }
-div img{
-  height: 240px;
+#container img{
+  height: 150px;
   width: 379px;
 }
 div{
   text-align: center;
+  margin-bottom: 0;
+  padding-bottom: 0;
+
 }
+h1{
+  text-align: left;
+  // margin-left: 110px;
+}
+#rock_image{
+  text-align: left;
+}
+
 .menu{
   display: grid;
-  grid-template-columns: 1fr;
+  grid-template-columns: 1fr 2fr;
   grid-template-rows:1fr;
-  height:350px;
+  height:440px;
+  text-align: center;
+}
+.sidetext{
+  text-align: right;
+  padding: 12px;
+  margin:70px 0 0 90px;
+}
+#table_mountain{
+  text-align: center;
+}
+.menu2{
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows:1fr;
+  height:440px;
   text-align: center;
 }
