--- a/css/style.css
+++ b/css/style.css
@@ -83,7 +83,9 @@ ul li:hover .dropdown:hover {
   grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
   margin-top: 1%;
-  grid-gap: 10px; }
+  grid-gap: 10px;
+  overflow-x: hidden;
+ }
   #container h1 {
     font-size: 30px;
     text-align: center; }
@@ -94,8 +96,8 @@ ul li:hover .dropdown:hover {
   grid-row-start: 1; }
 
 #container img {
-  height: 150px;
-  width: 379px; }
+  height: 210px;
+  width: 368px; }
 
 div {
   text-align: center;
@@ -105,7 +107,7 @@ div {
 h1 {
   text-align: left; }
 
-#rock_image {
+#info_image {
   text-align: left; }
 
 .menu {
@@ -120,14 +122,32 @@ h1 {
   padding: 12px;
   margin: 70px 0 0 90px; }
 
-#table_mountain {
+#info_text {
   text-align: center; }
 
 .menu2 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  height: 440px;
+  height: 340px;
   text-align: center; }
+
+.menu3 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  height: 350px;
+  text-align: center; }
+
+.menu4 {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  height: 450px;
+  text-align: center; }
+
+  #footer{
+    display: block;
+  }
 
 /*# sourceMappingURL=style.css.map */
