--- a/css/style.css
+++ b/css/style.css
@@ -84,8 +84,7 @@ ul li:hover .dropdown:hover {
   grid-template-rows: 1fr;
   margin-top: 1%;
   grid-gap: 10px;
-  overflow-x: hidden;
- }
+  overflow: hidden; }
   #container h1 {
     font-size: 30px;
     text-align: center; }
@@ -110,11 +109,13 @@ h1 {
 #info_image {
   text-align: left; }
 
+div {
+  overflow: hidden; }
+
 .menu {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  height: 440px;
   text-align: center; }
 
 .sidetext {
@@ -123,31 +124,41 @@ h1 {
   margin: 70px 0 0 90px; }
 
 #info_text {
-  text-align: center; }
+  text-align: center;
+  margin: 0 40px; }
 
 .menu2 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  height: 340px;
   text-align: center; }
 
 .menu3 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  height: 350px;
   text-align: center; }
 
 .menu4 {
   display: grid;
   grid-template-columns: 1fr 2fr;
   grid-template-rows: 1fr;
-  height: 450px;
   text-align: center; }
 
-  #footer{
-    display: block;
-  }
+@media only screen and (max-width: 800px) {
+  /* For tablets: */
+  #container img {
+    width: 100%;
+    height: 100%;
+    padding: 0; }
+
+  .right {
+    width: 100%; } }
+@media only screen and (max-width: 620px) {
+  /*for mobile phones*/
+  img {
+    width: 100%;
+    height: 10%;
+    padding: 0; } }
 
 /*# sourceMappingURL=style.css.map */
