--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -1,6 +1,100 @@
 
-
+body{
+  background-image: url(../images/pexels-photo-header.jpeg);
+  font-family: 'Open Sans', sans-serif ;
+  overflow: hidden;
+  margin: 0;
+  background-size: cover;
+}
 
 form{
-  background-color: green;
+  background-color: white;
+  border-radius: 5px;
+}
+ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+  background-color: #333; }
+
+.dropdown {
+  float: left;
+  overflow: hidden; }
+
+.categories {
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  min-width: 145px;
+  box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
+
+.categories a {
+  float: none;
+  color: black;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+  text-align: left; }
+
+li a:hover {
+  background-color: blue; }
+
+.dropdown:hover button {
+  background-color: blue;
+  width: 145px; }
+
+li {
+  float: left;
+  border-right: 1px solid #bbb; }
+
+li a {
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none; }
+
+ul li:hover .dropdown:hover {
+  background-color: blue; }
+
+.dropdown .button {
+  font-size: 16px;
+  border: none;
+  outline: none;
+  color: white;
+  padding: 14px 16px;
+  background-color: inherit;
+  font-family: inherit;
+  margin: 0; }
+
+.dropdown:hover .categories {
+  display: block; }
+
+.categories a:hover {
+  background-color: #ddd; }
+
+/* styling my from */
+input[type=text], select {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
+input[type=submit] {
+    width: 100%;
+    background-color: #4CAF50;
+    color: white;
+    padding: 14px 20px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+input[type=submit]:hover {
+    background-color: #45a049;
 }
