--- a/scss/style.scss
+++ b/scss/style.scss
@@ -137,7 +137,7 @@ h1{
   text-align: center;
 }
 
-}
+
 div{
   overflow:hidden;
 }
@@ -149,8 +149,30 @@ div{
   // height:440px;
   text-align: center;
 }
+
+#pic1{
+  background-image: url(../images/rock_climbing/rock_climbing1.jpg);
+  background-size: cover;
+}
+
+#pic2{
+  background-image: url(../images/camping/pexels-photo-221436.jpeg);
+  background-size: cover;
+}
+
+#pic3{
+  background-image: url(../images/hiking/hiking_platterkloof.jpg);
+  background-size: cover;
+}
+
+#pic4{
+  background-image: url(../images/fishing/fishing_cape.jpg);
+  background-size: cover;
+}
+
 .sidetext{
   text-align: center;
+
 }
 
 #text{
@@ -177,6 +199,7 @@ div{
   grid-template-columns: 1fr 2fr;
   grid-template-rows:1fr;
   text-align: center;
+  height:380px;
 }
 
 @media only screen and (max-width:800px) {
@@ -198,4 +221,4 @@ div{
     height:10%;
     padding:0;
   }
-  
+}
