--- a/css/style.css
+++ b/css/style.css
@@ -109,12 +109,6 @@ h1 {
 div {
   overflow: hidden; }
 
-.menu {
-  display: grid;
-  grid-template-columns: 1fr 2fr;
-  grid-template-rows: 1fr;
-  text-align: center; }
-
 #pic1 {
   background-image: url(../images/rock_climbing/rock_climbing1.jpg);
   background-size: cover; }
@@ -137,6 +131,12 @@ div {
 #text {
   text-align: center;
   margin: 0 20px; }
+
+.menu {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: 1fr;
+  text-align: center; }
 
 .menu2 {
   display: grid;
@@ -166,11 +166,15 @@ div {
 
   .right {
     width: 100%; } }
-@media only screen and (max-width: 620px) {
+@media screen and (max-width: 375px) {
   /*for mobile phones*/
-  img {
-    width: 100%;
-    height: 10%;
-    padding: 0; } }
+  .menu {
+    display: grid;
+    grid-template-columns: auto;
+    grid-template-rows: 1fr 1fr;
+    text-align: center; }
+
+  #pic1 {
+    height: 20%; } }
 
 /*# sourceMappingURL=style.css.map */
