--- a/css/style.css
+++ b/css/style.css
@@ -30,10 +30,10 @@ ul {
   text-align: left; }
 
 li a:hover {
-  background-color: blue; }
+  background-color: #4c87f5; }
 
 .dropdown:hover button {
-  background-color: blue;
+  background-color: #4c87f5;
   width: 145px; }
 
 li {
