--- a/scss/style.scss
+++ b/scss/style.scss
@@ -41,10 +41,10 @@ ul {
     text-align: left;
   }
   li a:hover {
-    background-color: blue;
+    background-color: rgb(76, 135, 245);
   }
   .dropdown:hover button{
-    background-color: blue;
+    background-color: rgb(76, 135, 245);
     width: 145px;
   }
 
