--- a/css/contact_style.css
+++ b/css/contact_style.css
@@ -87,7 +87,7 @@ input[type=text], select {
 }
 input[type=submit] {
     width: 100%;
-    background-color: #4CAF50;
+    background-color: #4c87f5;
     color: white;
     padding: 14px 20px;
     margin: 8px 0;
@@ -96,5 +96,20 @@ input[type=submit] {
     cursor: pointer;
 }
 input[type=submit]:hover {
-    background-color: #45a049;
+    background-color: #4c87f5;
+}
+
+
+@media screen and (max-width: 380px) {
+
+  input[type=submit] {
+    width: 60%;
+}
+input[type=text], select {
+  width: 50%;
+}
+
+fieldset{
+  width: 100%;
+}
 }
