--- a/css/style.css
+++ b/css/style.css
@@ -50,7 +50,7 @@ li a {
   text-decoration: none; }
 
 ul li:hover .dropdown:hover {
-  background-color: #4c87f5; }
+  background-color: blue; }
 
 .dropdown .button {
   font-size: 16px;
@@ -168,25 +168,6 @@ div {
     text-align: center; } }
 @media screen and (max-width: 380px) {
   /*for mobile phones*/
-  
-  #container {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: 300px;
-    margin-top: 1%;
-    grid-gap: 5px;
-    overflow: hidden; }
-    #container h1 {
-      font-size: 30px;
-      text-align: center; 
-    }
-    #container img {
-      height: 210px;
-      width: 368px; 
-      
-    }
-
-
   .menu {
     display: grid;
     grid-template-columns: auto;
@@ -208,7 +189,7 @@ div {
   .menu4 {
     display: grid;
     grid-template-columns: auto;
-    /* grid-template-rows: 200px 800px; */
+    grid-template-rows: 200px 1000px;
     text-align: center; } }
 
 /*# sourceMappingURL=style.css.map */
